k8s manifest/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-drum-service
spec:
  type: NodePort
  selector:
    app: flask-drum
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
      nodePort: 30007
